# rsvd

./: CMakeLists.txt  LICENSE.md  Makefile  README.md
cmake/Modules/: restrict.cmake
examples/: CMakeLists.txt  basic.cpp  benchmark.cpp  comparison.cpp  pure_c.c
src/: center.cpp  cinterface.cpp  get_random_seed.cpp  initial_seed.cpp  platform.h  rsvd.cpp  rsvd.h  scaffolding.cpp  utils.cpp
